<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.pinnacle_ic.jeff.myappportfolio.MainActivity"
    tools:showIn="@layout/activity_main"
    android:orientation="vertical">

       <TextView
          android:text="@string/strTitle"
          android:textAppearance="?android:attr/textAppearanceLarge"
          android:id="@+id/textView"
          style="@style/Title" />

    <Button
          android:text="@string/strSpotify"
          android:id="@+id/btnSpotify"
          android:layout_below="@+id/textView"
          android:onClick="launchSpotifyApp"
          style="@style/OrangeButton" />

       <Button
          android:text="@string/strScores"
          android:id="@+id/btnScores"
          android:onClick="launchScoresApp"
          style="@style/OrangeButton" />

       <Button
          android:text="@string/strLA"
          android:id="@+id/btnLibrary"
          android:layout_below="@+id/btnScores"
          android:onClick="launchLibraryApp"
          style="@style/OrangeButton" />

       <Button
          android:text="@string/strBIB"
          android:id="@+id/btnBIB"
          android:layout_below="@+id/btnLibrary"
          android:onClick="launchBIBApp"
          style="@style/OrangeButton" />

       <Button
          android:text="@string/strXYZ"
          android:id="@+id/btnXYZ"
          android:layout_below="@+id/btnBIB"
          android:onClick="launchXYZApp"
          style="@style/OrangeButton" />

       <Button
          android:text="@string/strCapstone"
          android:id="@+id/btnCapstone"
          android:layout_below="@+id/btnXYZ"
          android:onClick="launchCapstoneApp"
          style="@style/HotPinkButton" />

</LinearLayout>

</ScrollView>